[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crovly"
version = "1.0.1"
description = "Official Crovly Python SDK — verify captcha tokens"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Crovly", email = "dev@crovly.com"},
]
keywords = ["crovly", "captcha", "pow", "proof-of-work", "bot-protection", "verification"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Flask",
    "Framework :: FastAPI",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://crovly.com"
Documentation = "https://docs.crovly.com"
Repository = "https://github.com/crovly/python"
Changelog = "https://docs.crovly.com/changelog"
